borsh-schema-derive-internal/src/snapshots/borsh_schema_derive_internal__struct_schema__tests__simple_generics.snap
---
source: borsh-schema-derive-internal/src/struct_schema.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V> borsh::BorshSchema for A<K, V>
where
    K: borsh::BorshSchema,
    V: borsh::BorshSchema,
    HashMap<K, V>: borsh::BorshSchema,
    String: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        let params = borsh::__private::maybestd::vec![
            < K > ::declaration(), < V > ::declaration()
        ];
        format!(r#"{}<{}>"#, "A", params.join(", "))
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::NamedFields(
            borsh::__private::maybestd::vec![
                ("x".to_string(), < HashMap < K, V > as borsh::BorshSchema >
                ::declaration()), ("y".to_string(), < String as borsh::BorshSchema >
                ::declaration())
            ],
        );
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        Self::add_definition(Self::declaration(), definition, definitions);
        <HashMap<K, V> as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <String as borsh::BorshSchema>::add_definitions_recursively(definitions);
    }
}

