borsh-schema-derive-internal/src/snapshots/borsh_schema_derive_internal__struct_schema__tests__simple_struct.snap
---
source: borsh-schema-derive-internal/src/struct_schema.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::BorshSchema for A
where
    u64: borsh::BorshSchema,
    String: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        "A".to_string()
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::NamedFields(
            borsh::__private::maybestd::vec![
                ("x".to_string(), < u64 as borsh::BorshSchema > ::declaration()), ("y"
                .to_string(), < String as borsh::BorshSchema > ::declaration())
            ],
        );
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        Self::add_definition(Self::declaration(), definition, definitions);
        <u64 as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <String as borsh::BorshSchema>::add_definitions_recursively(definitions);
    }
}

